--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,48 @@
 img {
     max-width: 100%;
 }
+
+/* header */
+
+header {
+    background-color: brown;
+    min-height: 100px;
+}
+
+/* /header */
+
+
+/* main */
+.main {
+    display: flex;
+    justify-content: center; 
+    margin: 50px 0;
+}
+
+.row {
+    display:flex ;
+    justify-content: center;
+    width: 80%;
+    background-color: red;
+    flex-wrap: wrap;
+}
+
+.col {
+    background-color: aqua;
+    min-height: 100px;
+    width: calc(100% / 3);
+    padding: 30px;
+    border: 1px solid black;
+}
+
+/* /main */
+
+
+/* footer */
+
+footer {
+    min-height: 100px;
+    background-color: chartreuse;
+}
+
+/* /footer */
