--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,29 @@ body {
     position: relative;
 }
 
+.flex {
+    display: flex;
+}
+
+.space-b {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+ul {
+    list-style: none;
+}
+
+li {
+    margin: 0 5px;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
 .hearths:hover {
     color: red;
 }
@@ -80,12 +103,20 @@ h3 {
     margin-top: 2px;
 }
 
-
 /* header */
 
 header {
-    background-color: brown;
-    min-height: 100px;
+    background-color: #ff6900;
+    display: flex;
+    justify-content: center;
+    padding: 20px 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    Z-INDEX: 9999;
+    text-align: center;
+    vertical-align: middle;
 }
 
 /* /header */
@@ -95,7 +126,7 @@ header {
 .main {
     display: flex;
     justify-content: center; 
-    margin: 50px 0;
+    margin: 150px 0;
 }
 
 .row {
