--- a/css/style.css
+++ b/css/style.css
@@ -111,18 +111,33 @@ h5, h6 {
 
 header {
     background-color: #ff6900;
-    display: flex;
     justify-content: center;
     padding: 20px 0;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
+    height: 90px;
     Z-INDEX: 9999;
     text-align: center;
     vertical-align: middle;
 }
 
+.menu {
+    width: 30%;
+}
+
+.user {
+    justify-content: right;
+}
+
+.shop {
+    justify-content: left;
+}
+
+.logo {
+    height: 50px;
+}
 /* /header */
 
 
@@ -130,7 +145,7 @@ header {
 .main {
     display: flex;
     justify-content: center; 
-    margin: 150px 0;
+    padding: 150px 0;
 }
 
 .row {
@@ -140,7 +155,6 @@ header {
 
 .col {
     width: calc(100% / 3);
-    margin: 0 0 50px 0;
 }
 
 .card img {
